renamed main file to index.html for github pages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
   <footer>
-    <p>&copy; 2025 Book Store. All rights reserved.</p>
+    <p>&copy; 2025 Hamid Book Store. All rights reserved.</p>
     <a href="azeemhamid703@gmail.com">email</a>
     <a href="03336483581">contact</a>
   </footer>
